yaml/nginxPod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx
    labels:
      app: nginx
spec:
    containers:
    - image: nginx
      name: nginx
      ports:
      - containerPort: 80
