yaml/myweb-Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: myweb-service
    labels:
      app: myweb
spec:
    type: NodePort
    ports: 
    - port: 80
      targetPort: 8080
    selector: 
      app: myweb
