yaml/nginx-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  labels:
    app: nginx2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx2
  type: NodePort
