yaml/nginxService.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx
spec:
    type: LoadBalancer
    ports: 
    - port: 80
      nodePort: 30001
      targetPort: 80
    selector: 
      app: nginx
